--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -47,6 +47,49 @@ schemes:
       cyan: '0x8FBCBB'
       white: '0xECEFF4'
 
+  onenord: &onenord
+    primary:
+      background: '0x2E3440'
+      foreground: '0xC8D0E0'
+    normal:
+      black:   '0x3B4252'
+      red:     '0xBF616A'
+      green:   '0xA3BE8C'
+      yellow:  '0xEBCB8B'
+      blue:    '0x81A1C1'
+      magenta: '0xB988B0'
+      cyan:    '0x88C0D0'
+      white:   '0xE5E9F0'
+    bright:
+      black:   '0x4C566A'
+      red:     '0xBF616A'
+      green:   '0xA3BE8C'
+      yellow:  '0xEBCB8B'
+      blue:    '0x81A1C1'
+      magenta: '0xB988B0'
+      cyan:    '0x8FBCBB'
+      white:   '0xECEFF4'
+    search:
+      matches:
+       foreground: '#81A1C1'
+       background: '#4C566A'
+      focused_match:
+       foreground: '#EBCB8B'
+       background: '#4C566A'
+      bar:
+       background: '#434C5E'
+       foreground: '#88C0D0'
+    hints:
+      start:
+       foreground: '#B988B0'
+       background: '#4C566A'
+      end:
+       foreground: '#81A1C1'
+       background: '#4C566A'
+    selection:
+     text: CellForeground
+     background: '#3F4758'
+
   doom-one: &doom-one
     primary:
       background: '#282c34'
@@ -277,7 +320,7 @@ schemes:
       cyan:    '#54ced6'
       white:   '#282a2e'
 
-colors: *nord
+colors: *onenord
 
 font:
   normal:
