--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -2,44 +2,25 @@
 # Tmux 
 #
 
-set-option -g mouse on
-set-option -s set-clipboard off
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
 
-set -s copy-command "wl-copy"
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
 
-bind P paste-buffer
-
-bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "wl-copy"
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
-bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
-
-#
-# Sources:
-#   - https://www.bugsnag.com/blog/tmux-and-vim
-#
-
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \ 
-| grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-
-is_fzf="ps -o state= -o comm= -t '#{pane_tty}' \
-  | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?fzf$'"
-
-bind -n C-h run "($is_vim && tmux send-keys C-h) || \
-                          tmux select-pane -L"
-
-bind -n C-j run "($is_vim && tmux send-keys C-j)  || \
-                         ($is_fzf && tmux send-keys C-j) || \
-                         tmux select-pane -D"
-
-bind -n C-k run "($is_vim && tmux send-keys C-k) || \
-                          ($is_fzf && tmux send-keys C-k)  || \
-                          tmux select-pane -U"
-
-bind -n C-l run  "($is_vim && tmux send-keys C-l) || \
-                          tmux select-pane -R"
-
-bind-key -n C-\if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-
-bind | split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
+# Use prefix for clearing the screen with Ctrl-l since we're remapping it for navigation
+bind C-l send-keys 'C-l'
