--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,9 +1,12 @@
 #
-# Tmux 
+# Tmux configuration
 #
 
 # Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
+#
+# See:
+#   - https://github.com/christoomey/vim-tmux-navigator
+#
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
@@ -24,3 +27,17 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 # Use prefix for clearing the screen with Ctrl-l since we're remapping it for navigation
 bind C-l send-keys 'C-l'
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'arcticicestudio/nord-tmux'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.local/share/tmux/plugins/tpm/tpm'
