--- a/config/sway/config
+++ b/config/sway/config
@@ -132,8 +132,8 @@ output DVI-D-1 {
 # Inputs
 #
 
-seat seat0 hide_cursor when-typing enable
-seat seat0 idle_wake keyboard
+seat * hide_cursor when-typing enable
+seat * idle_wake keyboard pointer
 
 input type:keyboard {
   repeat_delay 250
