--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -5,14 +5,68 @@
 # Repository: https://github.com/dnordstrom/dotfiles
 #
 # See:
-#   - https://sw.kovidgoyal.net/kitty/conf
+#   - Overview: https://sw.kovidgoyal.net/kitty/overview/
+#   - Options: https://sw.kovidgoyal.net/kitty/conf/
+#   - Actions: https://sw.kovidgoyal.net/kitty/actions/
+#   - Default: https://sw.kovidgoyal.net/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
 #
 
+#
+# General
+#
+
+# TERM environment variable (some programs may feel better about "xterm-256color")
+term xterm-kitty
+
+# Allow controlling kitty from scripts or shell
+allow_remote_control yes
+
+# MB of history to browse with pager (normal scrollback is 1000 lines)
+scrollback_pager_history_size 2.0 
+
+# Disable annoying audio bell
+enable_audio_bell no
+
+# Hide pointer when typing
+mouse_hide_wait -1
+
+# Trackpad scroll speed
+touch_scroll_multiplier 1.0
+
+# Open URL without requiring modifiers
+open_url_modifiers no
+open_url_with default
+
+# Strip trailing spaces for normal selection but not rectangular
+strip_trailing_spaces smart
+select_by_word_characters @-./_~?&=%+#
+
+# Edit configuration in Neovim when using the mappings
+editor nvim
+
+#
+# Appearance
+#
+
+# Colors
 include ./nord-kitty.conf
 
-#
-# Settings
-#
+# Cursor
+cursor_blink_interval 0
+cursor_shape block
 
+# Font
 font_family InputMonoCondensed
+bold_font InputMonoCondensed Bold
+italic_font InputMonoCondensed Italic
+bold_italic_font InputMonoCondensed BoldIta
 font_size 9.0
+
+# Disable ligatures under cursor for legibility
+disable_ligatures cursor
+
+# Window padding as "same", "horizontal vertical", or "top left bottom right"
+window_padding_width 8 10
+
+# Enable changing background opacity on the fly (impacts performance)
+dynamic_background_opacity yes
