--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -67,6 +67,95 @@ editor nvim
 # MAPS
 #
 
+# Mouse actions
+
 mouse_map left click ungrabbed mouse_click_url_or_select
 
+# Layout management
+
+map kitty_mod+l>l layout_action next_layout
+map kitty_mod+l>a layout_action increase_num_full_size_windows
+map kitty_mod+l>x layout_action decrease_num_full_size_windows
+map kitty_mod+l>] layout_action increase_num_full_size_windows
+map kitty_mod+l>[ layout_action decrease_num_full_size_windows
+
+# Window management
+
+# Vim mappings
+map kitty_mod+enter new_window_with_cwd
+map kitty_mod+h neighboring_window left
+map kitty_mod+j neighboring_window bottom
+map kitty_mod+k neighboring_window top
+map kitty_mod+l neighboring_window right
+
+# W prefix key
+map kitty_mod+w>w nth_window -1
+map kitty_mod+w>n new_window_with_cwd
+map kitty_mod+w>N new_window_with_cwd
+map kitty_mod+w>h neighboring_window left
+map kitty_mod+w>j neighboring_window bottom
+map kitty_mod+w>k neighboring_window top
+map kitty_mod+w>l neighboring_window right
+map kitty_mod+w>< narrower 20 
+map kitty_mod+w>> wider 20
+map kitty_mod+w>+ taller 20 
+map kitty_mod+w>< shorter 20 
+map kitty_mod+w>= reset_window_sizes
+map kitty_mod+w>r start_resizing_window
+map kitty_mod+w>c close_window
+map kitty_mod+w>q close_window
+
+# W prefix key held
+map kitty_mod+w>kitty_mod+w nth_window -1
+map kitty_mod+w>kitty_mod+n new_window_with_cwd
+map kitty_mod+w>kitty_mod+N new_window_with_cwd
+map kitty_mod+w>kitty_mod+h neighboring_window left
+map kitty_mod+w>kitty_mod+j neighboring_window bottom
+map kitty_mod+w>kitty_mod+k neighboring_window top
+map kitty_mod+w>kitty_mod+l neighboring_window right
+map kitty_mod+w>kitty_mod+< narrower 20 
+map kitty_mod+w>kitty_mod+> wider 20
+map kitty_mod+w>kitty_mod++ taller 20 
+map kitty_mod+w>kitty_mod+< shorter 20 
+map kitty_mod+w>kitty_mod+= reset_window_sizes
+map kitty_mod+w>kitty_mod+r start_resizing_window
+map kitty_mod+w>kitty_mod+c close_window
+map kitty_mod+w>kitty_mod+q close_window
+
+# Seamless nvim <-> kitty navigation
+map ctrl+h kitten pass_keys.py neighboring_window left ctrl+h
+map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
+map ctrl+k kitten pass_keys.py neighboring_window top ctrl+k
+map ctrl+l kitten pass_keys.py neighboring_window right ctrl+l
+
+# Scrolling
+
+map kitty_mod+u scroll_page_up
+map kitty_mod+d scroll_page_down
+
+#
+# Remapping overlapping defaults from kitty_mod+key to kitty_mod+alt+key
+#
+
+map kitty_mod+alt+h show_scrollback
+
+#
+# Vim modifier maps
+#
+
+map ctrl+enter send_text all \x1b[13;5u
+map shift+enter send_text all \x1b[13;2u
+map ctrl+shift+enter send_text all \x1b[13;6u
+ 
+# key: H, mods: Shift|Control, chars: "\x1b[72;6u"
+# key: H, mods: Shift|Alt, chars: "\x1bH"
+#
+# key: J, mods: Shift|Control, chars: "\x1b[74;6u"
+# key: J, mods: Shift|Alt, chars: "\x1bJ"
+#
+# key: K, mods: Shift|Control, chars: "\x1b[75;6u"
+# key: K, mods: Shift|Alt, chars: "\x1bK"
+#
+# key: L, mods: Shift|Control, chars: "\x1b[76;6u"
+# key: L, mods: Shift|Alt, chars: "\x1bL"
 
