--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -73,11 +73,19 @@ mouse_map left click ungrabbed mouse_click_url_or_select
 
 # Layout management
 
-map kitty_mod+l>l layout_action next_layout
-map kitty_mod+l>a layout_action increase_num_full_size_windows
-map kitty_mod+l>x layout_action decrease_num_full_size_windows
-map kitty_mod+l>] layout_action increase_num_full_size_windows
-map kitty_mod+l>[ layout_action decrease_num_full_size_windows
+map kitty_mod+w>o layout_action next_layout
+map kitty_mod+w>i layout_action last_used_layout
+map kitty_mod+w>a layout_action increase_num_full_size_windows
+map kitty_mod+w>x layout_action decrease_num_full_size_windows
+map kitty_mod+w>] layout_action increase_num_full_size_windows
+map kitty_mod+w>[ layout_action decrease_num_full_size_windows
+
+map kitty_mod+w>kitty_mod+o layout_action next_layout
+map kitty_mod+w>kitty_mod+i layout_action last_used_layout
+map kitty_mod+w>kitty_mod+a layout_action increase_num_full_size_windows
+map kitty_mod+w>kitty_mod+x layout_action decrease_num_full_size_windows
+map kitty_mod+w>kitty_mod+] layout_action increase_num_full_size_windows
+map kitty_mod+w>kitty_mod+[ layout_action decrease_num_full_size_windows
 
 # Window management
 
@@ -92,6 +100,8 @@ map kitty_mod+l neighboring_window right
 map kitty_mod+w>w nth_window -1
 map kitty_mod+w>n new_window_with_cwd
 map kitty_mod+w>N new_window_with_cwd
+map kitty_mod+w>s launch --cwd current --location hsplit
+map kitty_mod+w>v launch --cwd current --location vsplit
 map kitty_mod+w>h neighboring_window left
 map kitty_mod+w>j neighboring_window bottom
 map kitty_mod+w>k neighboring_window top
@@ -109,6 +119,8 @@ map kitty_mod+w>q close_window
 map kitty_mod+w>kitty_mod+w nth_window -1
 map kitty_mod+w>kitty_mod+n new_window_with_cwd
 map kitty_mod+w>kitty_mod+N new_window_with_cwd
+map kitty_mod+w>kitty_mod+s launch --cwd current --location hsplit
+map kitty_mod+w>kitty_mod+v launch --cwd current --location vsplit
 map kitty_mod+w>kitty_mod+h neighboring_window left
 map kitty_mod+w>kitty_mod+j neighboring_window bottom
 map kitty_mod+w>kitty_mod+k neighboring_window top
@@ -146,16 +158,14 @@ map kitty_mod+alt+h show_scrollback
 map ctrl+enter send_text all \x1b[13;5u
 map shift+enter send_text all \x1b[13;2u
 map ctrl+shift+enter send_text all \x1b[13;6u
- 
-# key: H, mods: Shift|Control, chars: "\x1b[72;6u"
-# key: H, mods: Shift|Alt, chars: "\x1bH"
-#
-# key: J, mods: Shift|Control, chars: "\x1b[74;6u"
-# key: J, mods: Shift|Alt, chars: "\x1bJ"
-#
-# key: K, mods: Shift|Control, chars: "\x1b[75;6u"
-# key: K, mods: Shift|Alt, chars: "\x1bK"
-#
-# key: L, mods: Shift|Control, chars: "\x1b[76;6u"
-# key: L, mods: Shift|Alt, chars: "\x1bL"
+map ctrl+backspace send_text all \x1b[127;5u
+
+# map ctrl+shift+h send_text all \x1b[72;6u
+# map alt+shift+h send_text all \x1bH
+# map ctrl+shift+j send_text all \x1b[74;6u
+# map alt+shift+j send_text all \x1bJ
+# map ctrl+shift+k send_text all \x1b[75;6u
+# map alt+shift+k send_text all \x1bK
+# map ctrl+shift+l send_text all \x1b[76;6u
+# map alt+shift+l send_text all \x1bL
 
