Adding nushell and Starship and more nvim configuration.

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -73,8 +73,8 @@ mouse_map left click ungrabbed mouse_click_url_or_select
 
 # Layout management
 
-map kitty_mod+w>o layout_action next_layout
-map kitty_mod+w>i layout_action last_used_layout
+map kitty_mod+w>o next_layout
+map kitty_mod+w>i last_used_layout
 map kitty_mod+w>a layout_action increase_num_full_size_windows
 map kitty_mod+w>x layout_action decrease_num_full_size_windows
 map kitty_mod+w>] layout_action increase_num_full_size_windows
@@ -100,8 +100,8 @@ map kitty_mod+l neighboring_window right
 map kitty_mod+w>w nth_window -1
 map kitty_mod+w>n new_window_with_cwd
 map kitty_mod+w>N new_window_with_cwd
-map kitty_mod+w>s launch --cwd current --location hsplit
-map kitty_mod+w>v launch --cwd current --location vsplit
+map kitty_mod+w>s launch --cwd=current --location=hsplit
+map kitty_mod+w>v launch --cwd=current --location=vsplit
 map kitty_mod+w>h neighboring_window left
 map kitty_mod+w>j neighboring_window bottom
 map kitty_mod+w>k neighboring_window top
