Make nvim <-> kitty navigation seamless, and add kitty startup session.

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,6 +1,5 @@
-# vim:ft=kitty
 #
-# Kitty configuration
+# KITTY CONFIGURATION
 #
 # Author: Daniel Nordstrom <d@mrnordstrom.com>
 # Repository: https://github.com/dnordstrom/dotfiles
@@ -48,6 +47,7 @@ inactive_tab_font_style = italic
 term xterm-kitty
 linux_display_server wayland
 allow_remote_control yes
+listen_on unix:@mykitty
 
 wheel_scroll_multiplier 10.0
 touch_scroll_multiplier 2.0
@@ -160,12 +160,4 @@ map shift+enter send_text all \x1b[13;2u
 map ctrl+shift+enter send_text all \x1b[13;6u
 map ctrl+backspace send_text all \x1b[127;5u
 
-# map ctrl+shift+h send_text all \x1b[72;6u
-# map alt+shift+h send_text all \x1bH
-# map ctrl+shift+j send_text all \x1b[74;6u
-# map alt+shift+j send_text all \x1bJ
-# map ctrl+shift+k send_text all \x1b[75;6u
-# map alt+shift+k send_text all \x1bK
-# map ctrl+shift+l send_text all \x1b[76;6u
-# map alt+shift+l send_text all \x1bL
-
+# vim:ft=kitty
